  sequentially reading the archive of reference with implicit binary
  delta present for differential/incremental backups
- added -avc option to troubleshoot libcurl problems
- fixed bug in dar where sanity checks and slice min digit detection
  were applied to the local filesystem when the backup was stored
  remotely, this preventing the reading or remote backups

from 2.7.6 to 2.7.7
- added support for sequential reading more of sliced backup, to
  accommodate tape support used with slices (at the opposite of dar_split)
- fixing few typos in doc
- making libdar more tolerant when calls to fadvise fail

from 2.7.5 to 2.7.6
- adding -f option to dar_cp
- adding static version of dar_cp (dar_cp_static) as compilation outcome
- added FAQ for tape usage with dar
- fixing error in libdar header file installation
- fixed bug met when interrupting the creation of a block compressed
  backup (always used by lzo compression and by other algorithm only
  when performing multi-threaded compression)
- typo fixes in documentation
- fixed message in lax mode used to obtain from the user the archive format
  when this information is corrupted in the archive.
- fixing lax mode condition that popped up without being requested
- fixing bug met when reading slice an special block device by mean of
  a symlink
- adapting sanity checks to the case of a backup read from a special
  device in sequential-read mode.
- fixed bug that lead dar to report CRC error while reading a backup
  from a pipe with the help of an isolated catalogue
- adding -V option to dar_split (was using -v) for homogeneity with
  other commands

from 2.7.4 to 2.7.5
- fixed double free error met when deciphering an archive with a
  wrong password/passphrase and when multi-threading is used.

from 2.7.3 to 2.7.4
- fixed excessive context control that led libdar to report a bug
  when an file-system I/O error was returned by the operating system