@@ -1342,6 +1342,7 @@ void line_tools_display_features(user_interaction & dialog)
 	const char *endy = nullptr;
 	string time_accuracy = "";
 	string threadar_version = "";
+	string curl_version = "";
 
 	dialog.printf(gettext("   gzip compression (libz)      : %s"), YES_NO(compile_time::libz()));
 	dialog.printf(gettext("   bzip2 compression (libbzip2) : %s"), YES_NO(compile_time::libbz2()));
@@ -1408,7 +1409,11 @@ void line_tools_display_features(user_interaction & dialog)
 	    threadar_version = "";
 	dialog.printf(gettext("   Multiple threads (libthreads): %s %s"), YES_NO(compile_time::libthreadar()), threadar_version.c_str());
 	dialog.printf(gettext("   Delta compression (librsync) : %s"), YES_NO(compile_time::librsync()));
-	dialog.printf(gettext("   Remote repository (libcurl)  : %s"), YES_NO(compile_time::remote_repository()));
+	if(compile_time::remote_repository())
+	    curl_version = string("(") + compile_time::libcurl_version() + ")";
+	else
+	    curl_version = "";
+	dialog.printf(gettext("   Remote repository (libcurl)  : %s %s"), YES_NO(compile_time::remote_repository()), curl_version.c_str());
 	dialog.printf(gettext("   argon2 hashing (libargon2)   : %s"), YES_NO(compile_time::libargon2()));
     }
     catch(...)
