@@ -146,8 +146,11 @@ namespace libdar
 	    /// returns whether delta compression is available and delta diff stuff with it
 	bool librsync() noexcept;
 
-	    /// returns whether remote repository feature is available
+	    /// returns whether remote repository feature is available (implemented using libcurl)
 	bool remote_repository() noexcept;
+
+	    /// returns the libcurl version used or empty string if not available
+	std::string libcurl_version() noexcept;
 
     } // end of compile_time namespace
 
