@@ -7,6 +7,8 @@ from 2.7.7 to 2.7.8
 - fixed bug in dar where sanity checks and slice min digit detection
   were applied to the local filesystem when the backup was stored
   remotely, this preventing the reading or remote backups
+- exposing libcurl version to the version output (new API call added
+  for that, leading upgrading libdar API version to 6.5.0)
 
 from 2.7.6 to 2.7.7
 - added support for sequential reading more of sliced backup, to
